2004-01-31  Archana Shah  <archana.shah@wipro.com>

	* modemlights.h: Added a member in structure MLData for
	about dialog.
	* modemlights.c: (modemlights_applet_fill): Initialized about_dialog
	with NULL.
	(about_cb): Changed to use member field about_dialog instead of
	static variable about.
	(destroy_cb): Destroys about_dialog when the applet is removed.
	Fixes bug #132289

2004-01-29  Chee Bin HOH  <cbhoh@gnome.org>

	* modemlights.c:
	* properties.c: fix bug #132832 for displaying online help.
          
2004-01-27  Chee Bin HOH  <cbhoh@gnome.org>

	* docs/C/modemlights-C.omf:
	* docs/C/modemlights.xml: Update docs for 2.6.
	
	* docs/C/figures/modemlights_applet_advanced.png:
	* docs/C/figures/modemlights_applet_general.png: New screenshots
	  for 2.6.

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (install-data-local): builddir != srcdir fix.

2003-12-15  Olli Helenius  <liff@iki.fi>

	* modemlights.h
	Remove usage of deprecated APIs: GtkPixmap -> GtkImage,
	g_file_exists -> g_file_test and GTK_SIGNAL_FUNC ->
	G_CALLBACK. Also update some GDK functions to non-deprecated
	versions.

	* properties.c: Change GnomeColorPicker to GtkColorButton and
	convert gtk_entry_new_with_max_length to _new and _set_max_length.
	Also update some GDK functions.

2003-10-15  Kjartan Maraas  <kmaraas@gnome.org>

	* properties.c: (property_show): Merge fix for
	bug #124642 from stable.

Tue Sep 16 13:59:16 2003  George Lebl <jirka@5z.com>

	* properties.c: when command line is being inhibitted don't allow
	  setting commands or the device options.  That seems to all be
	  the kind of thing such a user should not be allowed to do.

Mon Sep 15 15:23:24 2003  George Lebl <jirka@5z.com>

	* modemlights.c: when started in lockdown mode, hide the preferences
	  item

2003-08-08 John Fleck <jfleck@inkstain.net>

	* docs/C/modemlights-C.omf
	* docs/C/modemlights.xml
	* docs/C/figures/modemlights_applet_advanced.png
	* docs/C/figures/modemlights_applet_advanced.png