@@ -1,3 +1,7 @@
+2004-02-05  Muktha  <muktha.narayan@wipro.com>
+
+	* modemlights.c: Add accessible name. Fixes bug #128260.
+
 2004-01-31  Archana Shah  <archana.shah@wipro.com>
 
 	* modemlights.h: Added a member in structure MLData for
